# Ragflow-grpc

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  get_ragflow_token.py  grpc_client_example.py  main.py  pyproject.toml  pytest.ini  test_grpc_connection.py  test_runner.py
example_data/: datasets.py
example_data/documents/: ai_overview.txt  machine_learning_basics.txt  nlp_essentials.txt
grpc_ragflow_server/: __init__.py  config.py  ragflow_client.py  ragflow_service.proto  ragflow_service_pb2.py  ragflow_service_pb2_grpc.py  server.py
tests/: __init__.py  conftest.py
tests/fixtures/: fixtures.py
tests/unit/: test_grpc_server.py  test_ragflow_client.py
